Changed the HTML for the site.

--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<script src="https://kit.fontawesome.com/a26362a22a.js"></script>
-	<title>Bliss® Official Site: 100% Cruelty-Free Face &amp; Body Skincare Products</title>
+	<title></title>
 	  <link rel="icon" href="https://cdn11.bigcommerce.com/s-9p889rxpkb/product_images/favicon.png?t=1519666169" type="image/x-icon">
         <link rel="shortcut icon" href="https://cdn11.bigcommerce.com/s-9p889rxpkb/product_images/favicon.png?t=1519666169" type="image/x-icon">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -12,10 +12,25 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </head>
-<body>
+
 
 <!-----style--->
 <style type="text/css">
+
+    html, body{
+        height: 100%
+    }
+    .main{
+      display: flex;
+      flex-direction: column;
+      height: 100%;
+    }
+    .content{
+      flex-grow: 1;
+      flex-shrink: 0;
+      flex-basis: auto;
+    }
+
 	.navbar{
 		background-color:#8CD0E3;
 		height: 150px;
@@ -23,6 +38,7 @@
 		top: 0;
         z-index: 20;
         overflow: visible;
+        position: fixed;
 
 	}
 	.bliss-logo{
@@ -47,7 +63,7 @@
     	float: left;
     	width: 60px;
     	margin-top: 18px;
-    	margin-left: 65px;
+    	margin-left: 30px;
     	text-decoration: none;
     	text-align: center;
     	font-family: cursive;
@@ -141,16 +157,16 @@
     
     .dropdown:hover .dropdown-content {display: block;}
     .menue{
-        margin-left: 250px;
+        margin-left: 240px;
      }
      .footer{
         background-color: #73d2e6;
         width: 100%; 
-        height: 375px;
+        height: 400px;
         left: 0;
         bottom: 0;
-        position: absolute;
-        
+       flex-shrink: 0;
+
      }
 
      .footer-list{
@@ -163,44 +179,49 @@
         margin-top: 30px;
         margin-left: 20px;
         margin-bottom: 20px;
+        align-content: 
 
      }
      .container{
         float: left;
-        width: 210px;
+        width: 200px;
         display: inline;
      }
      .social{
         display: inline-block;
         float: left;
         margin-right: 7px;
-        margin-bottom: 
+        margin-bottom: 7px;
      }
      .square{
         background-color:#f5ea77;
         height: 300px;
-        width: 300px;
-        margin-left: 850px;
+        width: 350px;
+        margin-left: 800px;
         margin-top: -50px;
      }
      .email{
-        margin-left: 40px;
+        margin-left: 60px;
         margin-top: 10px;
         height: 50px;
         width: 220px;
      }
-     .btn{
+     .footer-btn{
         background: rgba(0, 0, 0, 0) linear-gradient(to right, rgb(140, 208, 227) 100%, rgb(240, 140, 205) 100%) repeat scroll 0% 0%;
         border: none;
         height: 40px;
         width: 200px;
         margin-top: 20px;
-        margin-left: 50px;
+        margin-left: 72.5px;
         font-family: cursive;
      }
      
 </style>
+
 <!----navbar------>
+<body>
+<div class="main">
+
 <nav class="navbar">
 
 	<div class="left-nav">
@@ -245,22 +266,24 @@
                 <a href="#"><br><p style="color:    #DAA520;"><b>vegan skincare</b></p>> <img src="https://cdn8.bigcommerce.com/s-9p889rxpkb/product_images/uploaded_images/mega-menu-vegan-1.jpg"></a>
             </div></li>
 
-        <li class="hi"><a href="#" style="color: #000000;">shop all</a></li>
+        <li class="hi"><a href="{% url 'shop_all' %}" style="color: #000000;">shop all</a></li>
         <li class="hi"><a href="#" style="color: #000000;">ingredient glossray</a></li>
     </ul>
 </div>
 
 </nav>
 
-
+<div>
 {% block content %}
 {% endblock content %}
+</div>
+
 <!-------footer-------->
 
 <div class="footer">
 
    <div class="container">
-         <h4 class="footer-head">company</h4>
+         <h5 class="footer-head">company</h5>
 
               <ul class="footer-list">
             <li><a href="#" style="color: #000000;">our story</a></li>
@@ -271,13 +294,13 @@
 
 
    <div class="container">
-    <h4 class="footer-head">spa <br>Experience. <br> spa results.</h4>
+    <h5 class="footer-head">spa <br>Experience. <br> spa results.</h5>
     <img src="https://www.blissworld.com/content/assets/cruelty-free.png">
     <img src="https://www.blissworld.com/content/assets/free-from-parabens.png">
 </div>
 
 <div class="container">
-         <h4 class="footer-head">coustmor care</h4>
+         <h5 class="footer-head">coustmor care</h5>
 
               <ul class="footer-list">
             <li><a href="#" style="color: #000000;">contact us</a></li>
@@ -291,13 +314,13 @@
 
 
    <div class="container">
-         <h4 class="footer-head">the dry stuff</h4>
+         <h5 class="footer-head">the dry stuff</h5>
 
               <ul class="footer-list">
             <li><a href="{% url 'privecy' %}" style="color: #000000;">privecy and policey</a></li>
-            <li><a href="#" style="color: #000000;">terms and conditions</a></li>
+            <li><a href="{% url 'terms' %}" style="color: #000000;">terms and conditions</a></li>
             
-            <h4 class="footer-head">the fun stuff</h4>
+            <h5 class="footer-head">the fun stuff</h5>
           <li class="social"><a href="https://www.instagram.com/bliss/"><img height="50" width="50" src="https://cdn4.iconfinder.com/data/icons/social-messaging-ui-color-shapes-2-free/128/social-instagram-new-circle-512.png"></a></li>
 
           <li class="social"><a href="https://www.facebook.com/blissworld/"><img height="50" width="50" src="https://cdn4.iconfinder.com/data/icons/social-media-icons-the-circle-set/48/facebook_circle-512.png"></a></li>
@@ -311,17 +334,17 @@
    </div>
 
    <div class="square">
-       <h4 class="footer-head">let's stay connected, k ? </h4>
+       <h3 class="footer-head">let's stay connected, k ? </h3>
        <p class="footer-head">Subscribe to our emails (they're super fun, promise) and get 15% off your first online order</p>
         <form>
   <input class="email" type="email" name="email">
-  <input class="btn" type="submit" value="Subscribe">
+  <input class="footer-btn" type="submit" value="Subscribe">
 </form> 
 
    </div>
 
 </div>
 
-
+</div>
 </body>
 </html>
