--- a/templates/privecy.html
+++ b/templates/privecy.html
@@ -1,5 +1,35 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1>hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh</h1>
+<!DOCTYPE html>
+<html>
+<head>
+    <title>privecy & policey</title>
+</head>
+<style type="text/css">
+    .content{
+        padding: 40px;
+    }
+    .head{
+        padding-top: 180px;
+        padding-left: 35%;
+        padding-bottom: 40px;
+
+    }
+
+</style>
+<body>
+<h1 class="head">privecy & policey</h1>
+
+<div class="content">
+    <h5><b>Our Privacy Commitment</b></h5>
+    <p>We (Bliss Direct, Inc., including its Affiliates, (“Bliss”)) are committed to respecting your privacy and recognizing your need for appropriate protection and management of your personal data that you share with us. Personal data means information that identifies you as an individual or from which you may be identified. The purpose of this privacy policy is to inform you about personal data and other types of information we collect from you when you visit our web site, how we use that information, and the choices you have regarding our use of that information.</p>
+    <h5><b>What Information is Collected</b></h5>
+    <p>We collect your personal data for a legitimate business interest related to product offerings and services. In general, you can visit many of our web pages without telling us who you are or revealing your personal data. When each user visits our web page, our web server automatically recognizes the user’s IP address, the Internet domain address from which users visit us, the website where users accessed a link that lead them to our site, the user’s type of browser, the user’s device and hardware used to access the site, search terms the user supplies on our website, and IP-based geographic information. We also match this data with purchase information from the site if a user makes a purchase. We analyze this data to develop information on trends and statistics, but individual users remain anonymous in this analysis. We do not treat this data, when not connected to your name, as personaldata. There may be times (such as when you purchase or order a product, subscribe to a service, register to receive catalogs, register your warranty with one of our products, or participate in contests, or promotions, etc.) when we ask you to provide certain information about yourself like your name, shipping/billing address, telephone number, email address, credit card information, birth date, gender, occupation, personal interests, etc. We also maintain a record of your online product purchases. Whether or not you provide such information is your choice. But, if you choose not to provide the information we request, you may be unable to purchase products or access certain services, warranty service, offers, or content on our website. Our website uses ‘cookies’. A cookie is a small amount of data that is sent to your browser from a web server and stored on your computer’s hard drive. Generally, we use cookies to record session information, such as items that you add to your shopping cart. You can generally set your browser to not accept cookies or to notify you when you are sent a cookie, giving you the chance to decide whether or not to accept it.</p>
+    <h5><b>Third Party Ad Networks</b></h5>
+    <p>Blissworld.com participates in online behavioral advertising. We use third-party advertising companies to display ads tailored to your interests based on how you shop online. This means that we use third party advertising networks to advertise our products and services to you when you visit other websites that are part of the advertising network. These third parties may also collect information directly from you as described in this Privacy Policy over time and across different websites. The privacy policy of these third party companies applies to their collection, use and disclosure of your information.These advertising networks may download cookies onto your computer, or use other technology like web beacons, to enable them to recognize your computer each time they send you an advertisement whether or not you are visiting our website or another website. As a result, the advertising networks have the ability to deliver targeted advertisements that they believe would be of most interest to you. We do not have access to or control of the cookies that may be placed on your computer by third-party advertising networks. We use remarketing services to advertise our products to you on third party web sites after you have visited our website. In some instances you can opt-out of receiving personalized ads from third party advertisers and ad networks. Advertisers and ad networks that are members of the Network Advertising Initiative (NAI) or who follow the Digital Advertising Alliance's Self-Regulatory Principles for Online Behavioral Advertising provide opt-out choices at the following websites: NAI Website DAA Website.</p>
+
+</div>
+</body>
+</html>
 {% endblock content %}
