--- a/templates/home.html
+++ b/templates/home.html
@@ -1,8 +1,253 @@
 {% extends "base.html" %}
 
 {% block content %}
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Bliss® Official Site: 100% Cruelty-Free Face &amp; Body Skincare Products</title>
+	<link rel="stylesheet" type="text/css" href="slick/slick.css"/>
+<link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
 
-<h1>hhhhhhhhhhhhhhhhhhhh</h1>
-<!------ content goes here ---------->
+</head>
+<style type="text/css">
+	.img1{
+		height: 337px;
+		width: 500px;
+		margin-left: 50px;
+		margin-top: 210px;
+		z-index: 1;
+		position: absolute;
+	}
+	.blue-square{
+		height: 450px;
+		width: 900px;
+		margin-left: 200px;
+		background-color:#e6f7ff;
+		margin-top: 170px;
+		margin-bottom: 50px;
+	}
+	.text1{
+		margin-left: 400px;
+		font-family: cursive;
+		margin-top: 30px;
+	}
 
+	.btn{
+		background:  #f5ea77;
+		box-shadow: 5px 5px #8CD0E3;
+
+
+	}
+	.btn:hover {
+		background: #1e667a;
+		color: white;
+	}
+	.carousel-inner{
+		max-width: 500px; 
+		max-height: 337px; 
+	}
+	.purple-square{
+		height: 450px;
+		width: 900px;
+		margin-left: 50px;
+		background: linear-gradient(to right,#f08ccd 0,#8cd0e3 100%);
+		margin-top: 30px;
+		margin-bottom: 200px;
+		z-index: 2
+	}
+	.line{
+		border: 1px solid #8CD0E3;
+	}
+	.icon-list{
+		display: flex;
+		flex-direction: row;
+		list-style: none;
+	}
+	.icon1{
+		width: 57px;
+        height: 57px;
+        display: inline-block;
+        border-radius: 100%;
+        background-color: #E3F6FA;
+        margin: 0 12px 0 0;
+        background-image: url(https://cdn11.bigcommerce.com/s-9p889rxpkb/stencil/a3a3d9f0-a721-0137-07b5-0242ac11000e/e/88447ad0-a7c3-0137-9fb1-0242ac11000b/icons/icon-freeship.svg);
+        background-repeat: no-repeat;
+        background-size: 57% auto;
+        background-position: center center;
+	}
+	.icon2{
+		width: 57px;
+        height: 57px;
+        display: inline-block;
+        border-radius: 100%;
+        background-color: #E3F6FA;
+        margin: 0 12px 0 0;
+        background-image: url(https://cdn11.bigcommerce.com/s-9p889rxpkb/stencil/a3a3d9f0-a721-0137-07b5-0242ac11000e/e/88447ad0-a7c3-0137-9fb1-0242ac11000b/icons/icon-freegift.svg);
+        background-repeat: no-repeat;
+        background-size: 57% auto;
+        background-position: center center;
+	}
+	.icon3{
+		width: 57px;
+        height: 57px;
+        display: inline-block;
+        border-radius: 100%;
+        background-color: #E3F6FA;
+        margin: 0 12px 0 0;
+        background-image: url(https://cdn11.bigcommerce.com/s-9p889rxpkb/stencil/a3a3d9f0-a721-0137-07b5-0242ac11000e/e/88447ad0-a7c3-0137-9fb1-0242ac11000b/icons/icon-samples.svg);
+        background-repeat: no-repeat;
+        background-size: 57% auto;
+        background-position: center center;
+	}
+	.icon4{
+		width: 57px;
+        height: 57px;
+        display: inline-block;
+        border-radius: 100%;
+        background-color: #E3F6FA;
+        margin: 0 12px 0 0;
+        background-image: url(https://cdn11.bigcommerce.com/s-9p889rxpkb/stencil/a3a3d9f0-a721-0137-07b5-0242ac11000e/e/88447ad0-a7c3-0137-9fb1-0242ac11000b/icons/icon-kits.svg);
+        background-repeat: no-repeat;
+        background-size: 57% auto;
+        background-position: center center;
+
+	}
+	.lemon{
+		width: 100%;
+        text-align: center;
+        margin: 40px auto;
+        background-color: #F4F9FB;
+        height: 500px;
+        margin-top: -15px;
+	}
+	.pink-square{
+		width: 100%;
+        text-align: center;
+        margin: 40px auto;
+        background-color: #FBEAF5;
+        height: 600px;
+        margin-top: -40px;
+	}
+	.dark{
+
+        display: block;
+        width: 50%;
+        height: 75%;
+        background: #F1D3F0;
+        margin-left: 300px;
+
+
+	}
+	.color{
+        z-index: 1;
+		position: absolute;
+		margin-top: -380px;
+		padding-right: : 30px;
+	}
+
+
+</style>
+
+<body>
+	<a href="#"><img class="img1" src="https://cdn11.bigcommerce.com/s-9p889rxpkb/product_images/uploaded_images/hp-pumpkin-2.jpg?t=1565107144&_ga=2.230321564.1685465386.1564977401-193632068.1553900888"></a>
+	<div class="blue-square">
+		<h2 class="text1"> <br>new !</h2>
+		<h1 class="text1">power smooth <br></h1>
+		<p class="text1">Powered by a 10% skin-smoothing blend of natural AHAs and pumpkin enzymes, our Pumpkin Powerhouse™ Mask gently exfoliates and resurfaces for your smoothest skin yet.</p>
+
+		<p class="text1"><button class="btn" onclick="window.location.href = '#';">shop now</button></p>
+	</div>
+
+	<!--------bestsellers-------->
+
+
+
+<h2 style="margin-top: 100px; font-family: cursive; text-align: center; margin-bottom: 100px;">just Arrived</h2>
+
+
+
+
+
+<hr class="line">
+
+
+<ul class="icon-list">
+	<li><p style=" margin-right: 50px; font-family: cursive; font-size: 20px; padding: 8px;">only on bliss shahad.com </p></li>
+	<li>
+		<div class="icon1"></div>
+	</li>
+	<li style="margin-top: 14px; font-family: cursive; margin-right:22px;">free shipping</li>
+	<li class="icon2"></li>
+	<li style="margin-top: 14px; font-family: cursive; margin-right:22px;">bliss blue rewards</li>
+	<li class="icon3"></li>
+	<li style="margin-top: 14px; font-family: cursive; margin-right:22px;">free samples</li>
+	<li class="icon4"></li>
+	<li style="margin-top: 14px; font-family: cursive; margin-right:22px;">suprrises</li>
+	
+</ul>
+
+<hr class="line">
+
+<div class="purple-square">
+	<h1 style="padding-top: 100px; margin-left: 70px; font-family: cursive;">enjoy with us <br> your daily does of <br> <br> <b>happienes !</b></h1>
+</div>
+
+<div style="margin-left: 600px; margin-bottom: 50px; z-index: 3; position: relative; margin-top: -600px;" id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="d-block w-100" src="https://cdn11.bigcommerce.com/s-9p889rxpkb/product_images/uploaded_images/twin-tout-wam.jpg?t=1561494553&_ga=2.176950757.1503118514.1561402238-538936975.1555461835" alt="First slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="https://cdn11.bigcommerce.com/s-9p889rxpkb/product_images/uploaded_images/twin-green-tea-2.jpg?t=1560803876&_ga=2.119916097.850758875.1560783075-538936975.1555461835" alt="Second slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="https://store-xnvg6p8qpw.mybigcommerce.com/product_images/uploaded_images/instagram-3.jpg" alt="Third slide">
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+
+<br>
+<hr class="line">
+
+<div class="lemon">
+	<h2 style="left: 50%; font-family: cursive; padding-top: 70px;">iconic lemon and sage collection</h2>
+	<p style="left: 50%; font-family: cursive;">Supremely scented and highly addictive</p>
+	<ul class="icon-list">
+		<li><a href="#"><img height="260" width="260" src="https://www.blissworld.com/product_images/uploaded_images/hp-lemon-sage-family-1.png"></a></li>
+		<li><a href="#"><img height="260" width="260" src="https://www.blissworld.com/product_images/uploaded_images/hp-lemon-sage-family-2.png"></a></li>
+		<li><a href="#"><img height="260" width="260" src="https://www.blissworld.com/product_images/uploaded_images/hp-lemon-sage-family-3b.png"></a></li>
+		<li><a href="#"><img height="260" width="260" src="https://www.blissworld.com/product_images/uploaded_images/hp-lemon-sage-butter.png"></a></li>
+	</ul>
+</div>
+
+<div class="pink-square">
+	<br><br><br>
+	<div class="dark">
+
+		<h2 style="margin-left: -550px; padding-top: 100px; font-family: cursive;">spa experience. <br> spa results</h2>
+		<p style="margin-left: -250px; font-family: cursive; width: 500px;">Glow all out! Our spa-powered products feel and smell amazing, and do what they say they will. Plus, they're 100% cruelty-free, PETA-certified and free from harmful ingredients you don't want on your skin or body. Get it. #ThisIsBliss</p>
+
+		<p style="margin-left: -550px;"><button class="btn" onclick="window.location.href = '{% url 'shop_all' %}';">shop all</button></p>
+
+		<a href="{% url 'shop_all' %}"><img class="color" src="https://cdn11.bigcommerce.com/s-9p889rxpkb/product_images/uploaded_images/replacement-banner-20190514-063106983.jpg?t=1557857715">
+</div></a></div>
+
+<h3 style="text-align: center; font-family: cursive;">@bliss</h3>
+<p style="text-align: center; font-family: cursive;">your daily dose of happiens</p>
+
+
+
+
+
+
+</body>
+</html>
 {% endblock content %}
